--- a/Lecture 1/01_1_Bloch_sphere_Gates.ipynb
+++ b/Lecture 1/01_1_Bloch_sphere_Gates.ipynb
@@ -694,10 +694,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
-    "# "
+    "# Solution here"
    ]
   },
   {
