Lecture 1.1 - minor fix

--- a/Lecture 1/01_1_Bloch_sphere_Gates.ipynb
+++ b/Lecture 1/01_1_Bloch_sphere_Gates.ipynb
@@ -988,6 +988,14 @@
     "1. Write the H-gate as the outer products of vectors $|0\\rangle$, $|1\\rangle$, $|+\\rangle$ and $|-\\rangle$.\n",
     "2. Show that applying the sequence of gates: HZH, to any qubit state is equivalent to applying an X-gate.\n",
     "3. Find a combination of X, Z and H-gates that is equivalent to a Y-gate (ignoring global phase).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "## 4. Digression: Measuring in Different Bases  <a id=\"measuring\"></a>\n",
     "We have seen that the Z-basis is not intrinsically special, and that there are infinitely many other bases. Similarly with measurement, we don’t always have to measure in the computational basis (the Z-basis), we can measure our qubits in any basis.\n",
@@ -1068,6 +1076,22 @@
     "1.\tIf we initialize our qubit in the state $|+\\rangle$, what is the probability of measuring it in state $|-\\rangle$?\n",
     "2.\tUse Qiskit to display the probability of measuring a $|0\\rangle$ qubit in the states $|+\\rangle$ and $|-\\rangle$ (**Hint:** you might want to use `.get_counts()` and `plot_histogram()`).\n",
     "3.\tTry to create a function that measures in the Y-basis.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Measuring in different bases allows us to see Heisenberg’s famous uncertainty principle in action. Having certainty of measuring a state in the Z-basis removes all certainty of measuring a specific state in the  X-basis, and vice versa. A common misconception is that the uncertainty is due to the limits in our equipment, but here we can see the uncertainty is actually part of the nature of the qubit. \n",
     "\n",
@@ -1131,6 +1155,20 @@
     "\n",
     "#### Quick Exercise\n",
     "1. What are the eigenstates of the I-gate?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Your solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 6.2 The S-gates  <a id=\"sgate\"></a>\n",
     "\n",
