Lecture 1.2 - minor fixes

--- a/Lecture 1/01_2_Stern_Gerlach.ipynb
+++ b/Lecture 1/01_2_Stern_Gerlach.ipynb
@@ -656,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise: Redo also the remaining two cases"
+    "# Exercise: Run also the last two cases on a quantum computer"
    ]
   },
   {
